# smash

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  cabal.project
.github/workflows/: haskell-ci.yml
possibly-can-core/: CHANGELOG.md  possibly-can.cabal
possibly-can-core/src/Data/: Can.hs
possibly-can-lens/: CHANGELOG.md  possibly-can-lens.cabal
possibly-can-microlens/: CHANGELOG.md  possibly-can-microlens.cabal
smash-aeson/: CHANGELOG.md  README.md  default.nix  smash-aeson.cabal
smash-aeson/src/Data/Can/: Aeson.hs
smash-aeson/src/Data/Smash/: Aeson.hs
smash-aeson/src/Data/Wedge/: Aeson.hs
smash-categories/: CHANGELOG.md  smash-categories.cabal
smash-core/: CHANGELOG.md  README.md  default.nix  smash.cabal
smash-core/src/: .ghc.path  Internal.hs
smash-core/src/Category/: Pointed.hs
smash-core/src/Control/Monad/: Can.hs
smash-core/src/Control/Monad/Trans/: Can.hs  Smash.hs  Wedge.hs
smash-core/src/Data/: Can.hs  Smash.hs  Wedge.hs
smash-core/src/Data/Smash/: Internal.hs
smash-lens/: CHANGELOG.md  README.md  default.nix  smash-lens.cabal
smash-lens/src/Data/Can/: Lens.hs
smash-lens/src/Data/Smash/: Lens.hs
smash-lens/src/Data/Wedge/: Lens.hs
smash-microlens/: CHANGELOG.md  README.md  default.nix  smash-microlens.cabal
smash-microlens/src/Data/Can/: Microlens.hs
smash-microlens/src/Data/Smash/: Microlens.hs
smash-microlens/src/Data/Wedge/: Microlens.hs
smash-optics/: CHANGELOG.md  README.md  default.nix  smash-optics.cabal
smash-optics/src/Data/Can/: Optics.hs
smash-optics/src/Data/Smash/: Optics.hs
smash-optics/src/Data/Wedge/: Optics.hs
