cabal-version:      2.0
name:               smash-aeson
version:            0.1.0.0
synopsis:           Aeson support for the smash library
description:        Aeson support for the `smash` library
homepage:           https://github.com/emilypi/smash
bug-reports:        https://github.com/emilypi/smash/issues
license:            BSD3
license-file:       LICENSE
author:             Emily Pillmore
maintainer:         emilypi@cohomolo.gy
copyright:          (c) 2020 Emily Pillmore <emilypi@cohomolo.gy>
category:           Data
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.4
   || ==9.0.1

library
  exposed-modules:
    Data.Can.Aeson
    Data.Smash.Aeson
    Data.Wedge.Aeson

  build-depends:
      aeson                 >=1.4   && <1.6
    , base                  >=4.11  && <4.16
    , smash                 ^>=0.1.1
    , unordered-containers

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
