cabal-version:      2.0
name:               smash-aeson
version:            0.2.0.1
synopsis:           Aeson support for the smash library
description:        Aeson support for the `smash` library
homepage:           https://github.com/emilypi/smash
bug-reports:        https://github.com/emilypi/smash/issues
license:            BSD3
license-file:       LICENSE
author:             Emily Pillmore
maintainer:         emilypi@cohomolo.gy
copyright:          (c) 2020-2022 Emily Pillmore <emilypi@cohomolo.gy>
category:           Data
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.2

library
  exposed-modules:
    Data.Can.Aeson
    Data.Smash.Aeson
    Data.Wedge.Aeson

  build-depends:
      aeson                 >=2.0   && <2.1
    , base                  >=4.1  && <4.17
    , smash                 >=0.1.3
    , unordered-containers

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
