cabal-version:       2.0


name:                smash
version:             0.1.0.0
synopsis:            Smash products - like 'These', but with a unit!
description:
  Smash products are like the 'These' datatype, only with a unit. You can
  think of this type as isomorphic to 'Maybe (These a b)'.

homepage:            https://github.com/emilypi/smash
bug-reports:         https://github.com/emilypi/smash/issues
license:             BSD3
license-file:        LICENSE
author:              Emily Pillmore
maintainer:          emilypi@cohomolo.gy
copyright:           (c) 2020 Emily Pillmore <emilypi@cohomolo.gy>
category:            Data
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.2.2 || ==8.4.3 || ==8.4.4 || ==8.6.3 || ==8.6.5 || ==8.8.3 || ==8.10.1


source-repository head
  type:     git
  location: https://github.com/emilypi/smash.git


flag ghc-flags
  description: Generate .ghc.flags files during compilation
  manual:      True
  default:     False

flag perf-flags
  description: Performance tuning flags
  manual:      True
  default:     False

library
  exposed-modules:     Data.Can
                     , Data.Smash
                     , Data.Wedge
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.10 && <5.0
                     , bifunctors
                     , hashable

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

  if flag(ghc-flags)
    build-tool-depends: hsinspect:hsinspect
    build-depends: ghcflags
    ghc-options: -fplugin GhcFlags.Plugin

  if flag(perf-flags)
    ghc-options: -ddump-simpl -ddump-to-file


test-suite tasty
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base >=4.10 && <5.0
