cabal-version:       2.0

name:                smash
version:             0.1.2.0
synopsis:            Combinators for Maybe types
description:
  Smash products are like the 'These' datatype, only with a unit. You can
  think of this type as isomorphic to 'Maybe (These a b)'.

homepage:            https://github.com/emilypi/smash
bug-reports:         https://github.com/emilypi/smash/issues
license:             BSD3
license-file:        LICENSE
author:              Emily Pillmore
maintainer:          emilypi@cohomolo.gy
copyright:           (c) 2020 Emily Pillmore <emilypi@cohomolo.gy>
category:            Data
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.2.2 || ==8.4.3 || ==8.4.4 || ==8.6.3 || ==8.6.5 || ==8.8.3 || ==8.10.1


source-repository head
  type:     git
  location: https://github.com/emilypi/smash.git


library
  exposed-modules:     Data.Can
                     , Data.Smash
                     , Data.Wedge

  other-modules:       Internal

  build-depends:       base        >=4.10 && <5.0
                     , bifunctors ^>=5.5
                     , binary     ^>=0.8
                     , deepseq    ^>=1.4
                     , hashable   ^>=1.3
                     , transformers

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


test-suite tasty
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base >=4.10 && <5.0
