cabal-version:      2.0
name:               smash
version:            0.1.3
synopsis:           Combinators for Maybe types
description:
  Smash products are like the 'These' datatype, only with a unit. You can
  think of this type as isomorphic to 'Maybe (These a b)'.

homepage:           https://github.com/emilypi/smash
bug-reports:        https://github.com/emilypi/smash/issues
license:            BSD3
license-file:       LICENSE
author:             Emily Pillmore
maintainer:         emilypi@cohomolo.gy
copyright:          (c) 2020-2022 Emily Pillmore <emilypi@cohomolo.gy>
category:           Data
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.2

source-repository head
  type:     git
  location: https://github.com/emilypi/smash.git

library
  exposed-modules:
    Control.Monad.Trans.Can
    Control.Monad.Trans.Smash
    Control.Monad.Trans.Wedge
    Data.Can
    Data.Smash
    Data.Wedge

  other-modules:    Data.Smash.Internal
  build-depends:
      base             >=4.12 && <4.17
    , bifunctors       ^>=5.5
    , binary           ^>=0.8
    , deepseq          ^>=1.4
    , hashable         ^>=1.3
    , mtl
    , template-haskell >=2.2 && < 3.0

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
