cabal-version:      2.0
name:               smash-microlens
version:            0.1.0.2
synopsis:           Optics for the `smash` library
description:        Optics for the `smash` library using `microlens`
homepage:           https://github.com/emilypi/smash
bug-reports:        https://github.com/emilypi/smash/issues
license:            BSD3
license-file:       LICENSE
author:             Emily Pillmore
maintainer:         emilypi@cohomolo.gy
copyright:          (c) 2020-2022 Emily Pillmore <emilypi@cohomolo.gy>
category:           Data
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.2

source-repository head
  type:     git
  location: https://github.com/emilypi/smash.git

library
  exposed-modules:
    Data.Can.Microlens
    Data.Smash.Microlens
    Data.Wedge.Microlens

  -- other-modules:
  -- other-extensions:
  build-depends:
      base       >=4.11 && <4.17
    , microlens  >=0.3  && <0.5
    , smash      >=0.1.3

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite smash-microlens-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base >=4.10 && <5.0
