cabal-version:   2.0
name:            smash-optics
version:         0.1.0.0
synopsis:        Optics for the `smash` library using `optics-core`
description:
  Prisms, Traversals, and `optics` combinators for the `smash` library.

homepage:        https://github.com/emilypi/smash
bug-reports:     https://github.com/emilypi/smash/issues
license:         BSD3
license-file:    LICENSE
author:          Emily Pillmore
maintainer:      emilypi@cohomolo.gy
copyright:       (c) 2020 Emily Pillmore <emilypi@cohomolo.gy>
category:        Data
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.2

source-repository head
  type:     git
  location: https://github.com/emilypi/smash.git

library
  exposed-modules:
    Data.Can.Optics
    Data.Smash.Optics
    Data.Wedge.Optics

  build-depends:
      base         >=4.10 && <5.0
    , optics-core  ^>=0.3
    , smash        ^>=0.1

  hs-source-dirs:   src
  default-language: Haskell2010
