cabal-version:   2.0
name:            smash-optics
version:         0.1.0.2
synopsis:        Optics for the `smash` library using `optics-core`
description:
  Prisms, Traversals, and `optics` combinators for the `smash` library.

homepage:        https://github.com/emilypi/smash
bug-reports:     https://github.com/emilypi/smash/issues
license:         BSD3
license-file:    LICENSE
author:          Emily Pillmore
maintainer:      emilypi@cohomolo.gy
copyright:       (c) 2020-2022 Emily Pillmore <emilypi@cohomolo.gy>
category:        Data
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.2

source-repository head
  type:     git
  location: https://github.com/emilypi/smash.git

library
  exposed-modules:
    Data.Can.Optics
    Data.Smash.Optics
    Data.Wedge.Optics

  build-depends:
      base         >=4.11 && <4.17
    , optics-core  >=0.3 && <0.5
    , smash        >=0.1.3

  hs-source-dirs:   src
  default-language: Haskell2010
